@@ -23,6 +23,9 @@ Trunk (unreleased changes)
 INCOMPATIBLE CHANGES
 
 IMPROVEMENTS
+
+PIG-2685: Fix error in EvalFunc ctor when implementing Algebraic UDF whose return type is parameterized (andy schlaikjer via jcoveney)
+
 PIG-2677: Add target to build.xml to generate clover summary reports (gates)
 
 PIG-2650: Convenience mock Loader and Storer to simplify unit testing of Pig scripts (julien)
